[WIP]change user create api
