# backend/pkg/userapi/v1/types.go
@@ -25,6 +25,11 @@ type LoginResponse struct {
 	Token string `json:"token"`
 }
 
+// UserCreateResponse struct defines response data for user create
+type UserCreateResponse struct {
+	Token string `json:"token"`
+}
+
 // User struct defines info of user
 type User struct {
 	Name string `json:"name"`
